fixed comment in MR, and fixed select preset z-index, and modify checking value for suffix and prefix

--- a/src/portal/content/less/app/popup.less
+++ b/src/portal/content/less/app/popup.less
@@ -60,7 +60,7 @@
   //background-color: #fff;
   background-color: var(--dropdown-background-color);
   color: var(--secondary-color);
-  z-index: 54;
+  z-index: 81;
   box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
 }
